--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
-    "resend": "^3.2.0",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.37.3",
     "uuid": "^9.0.1"
   },
